--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,10 @@
+/*
+ * The MIT License (MIT)
+ * Copyright (c) 2017 Sybit GmbH
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ */
+
 apply plugin: 'java'
 apply plugin: 'maven'
 
