--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,8 @@
+/*
+ * The MIT License (MIT)
+ * Copyright (c) 2017 Sybit GmbH
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ */
+
 rootProject.name = 'airtable'
