--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.palantir:jacoco-coverage:0.4.0
+        classpath 'com.palantir:jacoco-coverage:0.4.0'
 	}
 	}
 
