--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ tasks.withType(JavaCompile) {
 }
 
 repositories {
-     maven { url "http://repo.maven.apache.org/maven2" }
+    mavenCentral()
 }
 
 dependencies {
@@ -34,4 +34,5 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'commons-io', name: 'commons-io', version:'2.5'
+    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.5.1'
 }
