--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,12 @@
 buildscript {
     repositories {
         jcenter()
-    }
+   }
+
     dependencies {
         classpath 'com.palantir:jacoco-coverage:0.4.0'
 	}
-	}
+}
 
 apply plugin: 'java'
 apply plugin: 'maven'
@@ -29,8 +30,13 @@ tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
 
+configurations { codacy }
+
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
+    maven { url "http://dl.bintray.com/typesafe/maven-releases" }
+
 }
 
 dependencies {
@@ -45,4 +51,17 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'commons-io', name: 'commons-io', version:'2.5'
     testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.5.1'
+
+    codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
+}
+
+task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
+    main = "com.codacy.CodacyCoverageReporter"
+    classpath = configurations.codacy
+    args = [
+            "-l",
+            "Java",
+            "-r",
+            "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+    ]
 }
