--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,14 @@ language: java
 jdk:
 - oraclejdk8
 before_install:
-- chmod +x ./gradlew
+  - chmod +x ./gradlew
+  - curl -sL https://github.com/jpm4j/jpm4j.installers/raw/master/dist/biz.aQute.jpm.run.jar >jpm4j.jar
+  - java -jar jpm4j.jar -u init
+  - ~/jpm/bin/jpm install com.codacy:codacy-coverage-reporter:assembly
+
+after_success:
+  - ~/jpm/bin/codacy-coverage-reporter -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
+
 deploy:
   provider: releases
   api_key:
