--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile group: 'org.json', name: 'json', version:'20150729'
     compile group: 'com.google.code.gson', name: 'gson', version:'2.5'
     compile group: 'commons-beanutils', name: 'commons-beanutils', version:'1.9.3'
+    compile group: 'commons-io', name: 'commons-io', version:'2.5'
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'commons-io', name: 'commons-io', version:'2.5'
