Revert "revert equals comparison"
This reverts commit 8b942cad29351f84c43442bc688a10958fe84d5f.

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ configurations { codacy }
 repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
+    maven { url "http://dl.bintray.com/typesafe/maven-releases" }
+
 }
 
 dependencies {
@@ -54,3 +56,13 @@ dependencies {
     codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 }
 
+task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
+    main = "com.codacy.CodacyCoverageReporter"
+    classpath = configurations.codacy
+    args = [
+            "-l",
+            "Java",
+            "-r",
+            "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+    ]
+}
