--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,6 @@ tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
 
-configurations { codacy }
-
 repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
@@ -44,25 +42,14 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.2'
     compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version:'4.0.2'
     compile group: 'org.apache.httpcomponents', name: 'httpmime', version:'4.5.1'
-    compile group: 'org.json', name: 'json', version:'20150729'
+    compile group: 'org.json', name: 'json', version:'20160810'
     compile group: 'com.google.code.gson', name: 'gson', version:'2.5'
     compile group: 'commons-beanutils', name: 'commons-beanutils', version:'1.9.3'
     compile group: 'commons-io', name: 'commons-io', version:'2.5'
+    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.25'
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'commons-io', name: 'commons-io', version:'2.5'
     testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.5.1'
-
-    codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
-}
-
-task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
-    main = "com.codacy.CodacyCoverageReporter"
-    classpath = configurations.codacy
-    args = [
-            "-l",
-            "Java",
-            "-r",
-            "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
-    ]
+    testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.25'
 }
