--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,4 @@
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  */
 
-rootProject.name = 'airtable'
+rootProject.name = 'airtable.java'
