--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,12 @@ jdk:
 
 before_install:
 - chmod +x ./gradlew
-- curl -sL https://github.com/jpm4j/jpm4j.installers/raw/master/dist/biz.aQute.jpm.run.jar
-  >jpm4j.jar
+- curl -sL https://github.com/jpm4j/jpm4j.installers/raw/master/dist/biz.aQute.jpm.run.jar >jpm4j.jar
 - java -jar jpm4j.jar -u init
-- "~/jpm/bin/jpm install com.codacy:codacy-coverage-reporter:assembly"
+- ~/jpm/bin/jpm install com.codacy:codacy-coverage-reporter:assembly
 
 after_success:
-- "~/jpm/bin/codacy-coverage-reporter -l Java -r build/reports/jacoco/test/jacocoTestReport.xml"
+- ~/jpm/bin/codacy-coverage-reporter -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
 
 deploy:
   - provider: script
