--- a/.travis.yml
+++ b/.travis.yml
@@ -28,10 +28,10 @@ deploy:
       tags: true
 
 
-
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-
-cache:
- directories:
-  — $HOME/.gradle
+#
+#before_cache:
+#  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+#
+#cache:
+# directories:
+#  — $HOME/.gradle
