--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,11 @@ jdk:
 
 before_install:
 - chmod +x ./gradlew
-- curl -sL https://github.com/jpm4j/jpm4j.installers/raw/master/dist/biz.aQute.jpm.run.jar >jpm4j.jar
-- java -jar jpm4j.jar -u init
-- ~/jpm/bin/jpm install com.codacy:codacy-coverage-reporter:assembly
-
-after_success:
-- ~/jpm/bin/codacy-coverage-reporter -l Java -r build/reports/jacoco/test/jacocoTestReport.xml
 
 deploy:
   - provider: script
     skip_cleanup: true
-    script: gradlew install bintrayUpload
+    script: gradlew install sendCoverageToCodacy bintrayUpload
     on:
       tags: true
 
@@ -28,10 +22,10 @@ deploy:
       tags: true
 
 
-#
-#before_cache:
-#  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-#
-#cache:
-# directories:
-#  — $HOME/.gradle
+
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+
+cache:
+ directories:
+  — $HOME/.gradle
