--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,10 @@ repositories {
     maven { url "http://dl.bintray.com/typesafe/maven-releases" }
 }
 
+configurations {
+    codacy
+}
+
 dependencies {
     compile group: 'com.mashape.unirest', name: 'unirest-java', version:'1.4.9'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.2'
@@ -58,6 +62,8 @@ dependencies {
     testCompile group: 'commons-io', name: 'commons-io', version:'2.5'
     testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.5.1'
     testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.25'
+
+    codacy group: 'com.codacy', name: 'codacy-coverage-reporter', version: '1.0.13'
 }
 
 
@@ -87,6 +93,17 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
+}
+
+task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
+    main = "com.codacy.CodacyCoverageReporter"
+    classpath = configurations.codacy
+    args = [
+            "-l",
+            "Java",
+            "-r",
+            "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+    ]
 }
 
 // add javadoc/source jar tasks as artifacts
