--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,22 @@
 import com.smokejumperit.gradle.report.DependencyLicensePlugin
 
 /*
+ * Gets the version name from the latest Git tag
+ */
+def getVersionName = { ->
+    try {
+        def stdout = new ByteArrayOutputStream()
+        exec {
+            commandLine 'git', 'describe', '--tags'
+            standardOutput = stdout
+        }
+        return stdout.toString().trim()
+    }
+    catch (ignored) {
+        return version;
+    }
+}
+/*
  * The MIT License (MIT)
  * Copyright (c) 2017 Sybit GmbH
  *
@@ -27,7 +43,7 @@ apply plugin: 'com.jfrog.bintray'
 apply plugin: DependencyLicensePlugin
 
 group = 'com.sybit'
-version = '0.1'
+version = getVersionName()
 
 description = """com.sybit airtable"""
 
@@ -66,23 +82,6 @@ dependencies {
     codacy group: 'com.codacy', name: 'codacy-coverage-reporter', version: '1.0.13'
 }
 
-
-/*
- * Gets the version name from the latest Git tag
- */
-def getVersionName = { ->
-    try {
-        def stdout = new ByteArrayOutputStream()
-        exec {
-            commandLine 'git', 'describe', '--tags'
-            standardOutput = stdout
-        }
-        return stdout.toString().trim()
-    }
-    catch (ignored) {
-        return version;
-    }
-}
 
 // custom tasks for creating source/javadoc jars
 task sourcesJar(type: Jar, dependsOn: classes) {
@@ -130,17 +129,21 @@ bintray {
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
 
-    publications = ['mavenJava']
+    //publications = ['mavenJava']
+    configurations = ['archives']
 
     dryRun = false //Whether to run this as dry-run, without deploying
     publish = true //If version should be auto published after an upload
-    version getVersionName()
+
     pkg {
         repo = 'maven'
         userOrg = 'sybit-education'
         name = 'airtable.java'
         licenses = ['MIT License']
         vcsUrl = 'https://github.com/Sybit-Education/airtable.java.git'
-
+        version {
+            name = getVersionName()
+            released = new Date()
+        }
     }
 }
