--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ deploy:
     tags: true
 - provider: script
   skip_cleanup: true
-  script: gradlew install bintrayUpload
+  script: "./gradlew install bintrayUpload"
   on:
     repo: Sybit-Education/airtable.java
     tags: true
