verbose logging for bintray

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ deploy:
     repo: Sybit-Education/airtable.java
     tags: true
 - provider: script
-  skip_cleanup: true
-  script: "./gradlew install bintrayUpload"
+  skip_cleanup: false
+  script: "./gradlew -i bintrayUpload"
   on:
     repo: Sybit-Education/airtable.java
     tags: true
