--- a/build.gradle
+++ b/build.gradle
@@ -27,18 +27,23 @@ buildscript {
         jcenter()
    }
 
-    dependencies {
-        classpath 'com.palantir:jacoco-coverage:0.4.0'
-        classpath "com.smokejumperit.gradle.license:Gradle-License-Report:0.0.2"
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-	}
+   dependencies {
+       classpath 'com.palantir:jacoco-coverage:0.4.0'
+       classpath "com.smokejumperit.gradle.license:Gradle-License-Report:0.0.2"
+       classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+   }
 }
 
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'com.palantir.jacoco-coverage'
-apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
+allprojects {
+    repositories {
+        jcenter()
+    }
+    apply plugin: 'java'
+    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
+    apply plugin: 'com.palantir.jacoco-coverage'
+    apply plugin: 'com.jfrog.bintray'
+}
 
 group = 'com.sybit'
 version = getVersionName()
@@ -110,12 +115,15 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
 
 publishing {
     publications {
-        mavenJava(MavenPublication) {
+        MyPublication(MavenPublication) {
             if (plugins.hasPlugin('war')) {
                 from components.web
             } else {
                 from components.java
             }
+            groupId group
+            artifactId rootProject.name
+            version getVersionName()
 
             artifact sourcesJar
             artifact javadocJar
@@ -127,7 +135,7 @@ bintray {
     user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
     key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
 
-    publications = ['mavenJava']
+    publications = ['MyPublication']
     //configurations = ['archives']
 
     dryRun = false //Whether to run this as dry-run, without deploying
