--- a/build.gradle
+++ b/build.gradle
@@ -101,6 +101,7 @@ artifacts {
     archives sourcesJar, javadocJar
 }
 
+//task to send coverage data to Codacy
 task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
     main = "com.codacy.CodacyCoverageReporter"
     classpath = configurations.codacy
@@ -115,7 +116,17 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
 
 publishing {
     publications {
+
         MyPublication(MavenPublication) {
+            //we have to change scope from runtime to compile. Especially for Gson-lib.
+            pom.withXml {
+                asNode().dependencies.'*'.findAll() {
+                    it.scope.text() == 'runtime' && project.configurations.compile.allDependencies.find { dep ->
+                        dep.name == it.artifactId.text()
+                    }
+                }.each { it.scope*.value = 'compile' }
+            }
+
             if (plugins.hasPlugin('war')) {
                 from components.web
             } else {
@@ -129,38 +140,28 @@ publishing {
             artifact javadocJar
         }
 
-        all {
-            //we have to change scope from runtime to compile. especially for Gson-lib.
-            pom.withXml {
-                asNode().dependencies.'*'.findAll() {
-                    it.scope.text() == 'runtime' && project.configurations.compile.allDependencies.find { dep ->
-                        dep.name == it.artifactId.text()
-                    }
-                }.each { it.scope*.value = 'compile' }
-            }
-        }
     }
+}
 
-    bintray {
-        user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-        key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+bintray {
+    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
 
-        publications = ['MyPublication']
-        //configurations = ['archives']
+    publications = ['MyPublication']
+    //configurations = ['archives']
 
-        dryRun = false //Whether to run this as dry-run, without deploying
-        publish = true //If version should be auto published after an upload
+    dryRun = false //Whether to run this as dry-run, without deploying
+    publish = true //If version should be auto published after an upload
 
-        pkg {
-            repo = 'maven'
-            userOrg = 'sybit-education'
-            name = 'airtable.java'
-            licenses = ['MIT License']
-            vcsUrl = 'https://github.com/Sybit-Education/airtable.java.git'
-            version {
-                name = getVersionName()
-                released = new Date()
-            }
+    pkg {
+        repo = 'maven'
+        userOrg = 'sybit-education'
+        name = 'airtable.java'
+        licenses = ['MIT License']
+        vcsUrl = 'https://github.com/Sybit-Education/airtable.java.git'
+        version {
+            name = getVersionName()
+            released = new Date()
         }
     }
 }
