changed so only master branch is being build, PR needs to be made to develop now

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,3 +25,6 @@ before_cache:
 - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
   directories: "— $HOME/.gradle"
+branches:
+  only: 
+    - master
