restructured for integration tests

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ hs_err_pid*
 build/
 .gradle/
 src/test/resources/credentials.properties
+src/integrationTest/resources/credentials.properties
 
 # IDE
 .idea
