edited travis file so integration tests dont run on PR

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ jdk:
 before_install:
 - chmod +x ./gradlew
 script:
-- "./gradlew check sendCoverageToCodacy"
+- 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ./gradlew test'
+- 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./gradlew itest check sendCoverageToCodacy'
 deploy:
 - provider: releases
   api_key:
