edited gitignore nb gradle properties

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ build/
 .gradle/
 src/test/resources/credentials.properties
 src/itest/resources/credentials.properties
+.nb-gradle-properties
+.nb-gradle/
 
 # IDE
 .idea
