--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ before_install:
 - chmod +x ./gradlew
 script:
 - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ./gradlew check; fi'
-- 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./gradlew test integrationTest; fi'
-- "./gradlew sendCoverageToCodacy"
+- 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./gradlew test integrationTest sendCoverageToCodacy; fi'
 deploy:
 - provider: releases
   api_key:
