Feature - Destroy-Improvements - changed tests

--- a/src/itest/resources/mappings/mapping-ActorDeleteSucces.json
+++ b/src/itest/resources/mappings/mapping-ActorDeleteSucces.json
@@ -5,6 +5,6 @@
   },
   "response" : {
     "status" : 200,
-    "bodyFileName" : "/body-ActorDelete.json"
+    "bodyFileName" : "/body-ActorDeleteSucess.json"
   }
 }
