--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     compile group: 'commons-beanutils', name: 'commons-beanutils', version:'1.9.3'
     compile group: 'commons-io', name: 'commons-io', version:'2.5'
     compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.25'
+    compile group: 'com.github.jsqlparser', name: 'jsqlparser', version: '2.0'
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'commons-io', name: 'commons-io', version:'2.5'
