--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,7 @@ dependencies {
     testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.23.2'
     testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.26'
 
-    codacy group: 'com.codacy', name: 'codacy-coverage-reporter', version: '6.0.0'
+    codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 }
 
 // custom tasks for creating source jar
@@ -126,6 +126,7 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
     main = "com.codacy.CodacyCoverageReporter"
     classpath = configurations.codacy
     args = [
+            "report",
             "-l",
             "Java",
             "-r",
@@ -194,5 +195,5 @@ bintray {
     }
 }
 
-integrationTest.mustRunAfter test 
+integrationTest.mustRunAfter test
 
