--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,7 @@ dependencies {
     testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.23.2'
     testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.26'
 
-    codacy group: 'com.codacy', name: 'codacy-coverage-reporter', version: '1.0.13'
+    codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 }
 
 // custom tasks for creating source jar
@@ -126,6 +126,7 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
     main = "com.codacy.CodacyCoverageReporter"
     classpath = configurations.codacy
     args = [
+            "report",
             "-l",
             "Java",
             "-r",
@@ -134,7 +135,7 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
 }
 
 task integrationTest(type: Test) {
-  testClassesDir = sourceSets.integrationTest.output.classesDir
+  testClassesDirs = project.sourceSets.integrationTest.output.classesDirs
   classpath = sourceSets.integrationTest.runtimeClasspath
   // This is not needed, but I like to see which tests have run
   testLogging {
@@ -194,5 +195,5 @@ bintray {
     }
 }
 
-integrationTest.mustRunAfter test 
+integrationTest.mustRunAfter test
 
