--- a/build.gradle
+++ b/build.gradle
@@ -22,17 +22,22 @@ def getVersionName = { ->
     }
 }
 
+plugins {
+    id "maven-publish"
+}
+
+
 buildscript {
     repositories {
         mavenLocal()
         jcenter()
-   }
+    }
 
-   dependencies {
-       classpath 'com.palantir:jacoco-coverage:0.4.0'
-       classpath "com.smokejumperit.gradle.license:Gradle-License-Report:0.0.2"
-       classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-   }
+    dependencies {
+        classpath 'com.palantir:jacoco-coverage:0.4.0'
+        classpath "com.smokejumperit.gradle.license:Gradle-License-Report:0.0.2"
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
+    }
 }
 
 allprojects {
@@ -40,8 +45,6 @@ allprojects {
         jcenter()
     }
     apply plugin: 'java'
-    apply plugin: 'maven'
-    apply plugin: 'maven-publish'
     apply plugin: 'com.palantir.jacoco-coverage'
     apply plugin: 'com.jfrog.bintray'
 }
@@ -54,7 +57,7 @@ description = """com.sybit airtable"""
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 tasks.withType(JavaCompile) {
-	options.encoding = 'UTF-8'
+    options.encoding = 'UTF-8'
 }
 
 sourceSets {
@@ -65,14 +68,14 @@ sourceSets {
         //runtimeClasspath += files('src/itest/resources/com/buransky')
         // Use "java" if you don't use Scala as a programming language
         java.srcDir file('src/itest/java')
-  }
-  // This is just to trick IntelliJ IDEA to add integration test
-  // resources to classpath when running integration tests from
-  // the IDE. It's is not a good solution but I don't know about
-  // a better one.
-  test {
-    resources.srcDir file('src/itest/resources')
-  }
+    }
+    // This is just to trick IntelliJ IDEA to add integration test
+    // resources to classpath when running integration tests from
+    // the IDE. It's is not a good solution but I don't know about
+    // a better one.
+    test {
+        resources.srcDir file('src/itest/resources')
+    }
 }
 
 repositories {
@@ -90,17 +93,17 @@ configurations {
 }
 
 dependencies {
-    compile group: 'com.mashape.unirest', name: 'unirest-java', version:'1.4.9'
-    compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.5.9'
-    compile group: 'org.json', name: 'json', version:'20160810'
-    compile group: 'com.google.code.gson', name: 'gson', version:'2.8.5'
-    compile group: 'commons-beanutils', name: 'commons-beanutils', version:'1.9.3'
-    compile group: 'commons-io', name: 'commons-io', version:'2.6'
-    compile group: 'org.slf4j', name: 'slf4j-api', version:'1.7.26'
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
+    compile group: 'org.json', name: 'json', version: '20160810'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
 
-    testCompile group: 'junit', name: 'junit', version:'4.12'
-    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version:'2.23.2'
-    testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version:'1.7.26'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
+    testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.26'
 
     codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 }
@@ -135,12 +138,12 @@ task sendCoverageToCodacy(type: JavaExec, dependsOn: jacocoTestReport) {
 }
 
 task integrationTest(type: Test) {
-  testClassesDirs = project.sourceSets.integrationTest.output.classesDirs
-  classpath = sourceSets.integrationTest.runtimeClasspath
-  // This is not needed, but I like to see which tests have run
-  testLogging {
-    events "passed", "skipped", "failed"
-  }
+    testClassesDirs = project.sourceSets.integrationTest.output.classesDirs
+    classpath = sourceSets.integrationTest.runtimeClasspath
+    // This is not needed, but I like to see which tests have run
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
 
 publishing {
@@ -169,6 +172,16 @@ publishing {
             artifact javadocJar
         }
 
+        repositories {
+            maven {
+                name = "OSSRH"
+                url = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+                credentials {
+                    username = System.getenv("MAVEN_USERNAME")
+                    password = System.getenv("MAVEN_PASSWORD")
+                }
+            }
+        }
     }
 }
 
