--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@
 
 plugins {
     id "maven-publish"
-    id "com.palantir.jacoco-coverage" version "0.4.0"
+    id "jacoco"
     id 'com.github.jk1.dependency-license-report' version '2.0'
     id "com.jfrog.bintray" version "1.8.5"
 }
@@ -44,6 +44,10 @@ tasks.withType(JavaCompile) {
     targetCompatibility = 1.8
 }
 
+tasks.named("processTestResources") {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 sourceSets {
     integrationTest {
         compileClasspath += main.output + test.output
@@ -65,7 +69,7 @@ sourceSets {
 repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
-    maven { url "http://dl.bintray.com/typesafe/maven-releases" }
+    maven { url "https://dl.bintray.com/typesafe/maven-releases" }
 }
 
 configurations {
@@ -83,9 +87,9 @@ dependencies {
     implementation  group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation  group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
-    testCompile group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.26'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
+    testImplementation group: 'org.slf4j', name: 'slf4j-jdk14', version: '1.7.26'
 
     codacy 'com.github.codacy:codacy-coverage-reporter:-SNAPSHOT'
 }
