--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,7 +5,7 @@
 
 name: Publish package to the Maven Central Repository
 
-on: [push]
+on: [ push ]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -16,6 +16,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - name: Make gradlew executable
+        run: chmod +x ./gradlew
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       - name: Publish package
