--- a/build.gradle
+++ b/build.gradle
@@ -79,13 +79,13 @@ configurations {
 }
 
 dependencies {
-    implementation  group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
-    implementation  group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
-    implementation  group: 'org.json', name: 'json', version: '20160810'
-    implementation  group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
-    implementation  group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
-    implementation  group: 'commons-io', name: 'commons-io', version: '2.6'
-    implementation  group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
+    implementation group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
+    implementation group: 'org.json', name: 'json', version: '20160810'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.23.2'
@@ -133,6 +133,18 @@ task integrationTest(type: Test) {
 }
 
 publishing {
+
+    repositories {
+        maven {
+            name = "OSSRH"
+            url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            credentials {
+                username = System.getenv("MAVEN_USERNAME")
+                password = System.getenv("MAVEN_PASSWORD")
+            }
+        }
+    }
+
     publications {
         MyPublication(MavenPublication) {
             //we have to change scope from runtime to compile. Especially for Gson-lib.
@@ -158,30 +170,30 @@ publishing {
         }
 
     }
+
 }
+    bintray {
+        user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
+        key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
 
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
+        publications = ['MyPublication']
+        //configurations = ['archives']
 
-    publications = ['MyPublication']
-    //configurations = ['archives']
+        dryRun = false //Whether to run this as dry-run, without deploying
+        publish = true //If version should be auto published after an upload
 
-    dryRun = false //Whether to run this as dry-run, without deploying
-    publish = true //If version should be auto published after an upload
-
-    pkg {
-        repo = 'maven'
-        userOrg = 'sybit-education'
-        name = 'airtable.java'
-        licenses = ['MIT License']
-        vcsUrl = 'https://github.com/Sybit-Education/airtable.java.git'
-        version {
-            name = getVersionName()
-            released = new Date()
+        pkg {
+            repo = 'maven'
+            userOrg = 'sybit-education'
+            name = 'airtable.java'
+            licenses = ['MIT License']
+            vcsUrl = 'https://github.com/Sybit-Education/airtable.java.git'
+            version {
+                name = getVersionName()
+                released = new Date()
+            }
         }
     }
-}
 
-integrationTest.mustRunAfter test
+    integrationTest.mustRunAfter test
 
