--- a/build.gradle
+++ b/build.gradle
@@ -200,12 +200,14 @@ publishing {
 }
 
 signing {
-    def signingKey = System.getenv("PRIVATE_KEY")
-    def signingPassword = System.getenv("SIGNING_SECRET")
+    //def signingKey = System.getenv("PRIVATE_KEY")
+    //def signingPassword = System.getenv("SIGNING_SECRET")
+
+    signing.keyId = System.getenv("PRIVATE_KEY")
+    signing.password = System.getenv("SIGNING_SECRET")
     useInMemoryPgpKeys(signingKey, signingPassword)
     sign publishing.publications.maven
 }
-
 
 
 bintray {
