--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ plugins {
 }
 
 apply plugin: 'java'
+apply plugin: 'signing'
 
 def getVersionName = { ->
     try {
@@ -200,38 +201,7 @@ publishing {
 }
 
 signing {
-    //def signingKey = System.getenv("PRIVATE_KEY")
-    //def signingPassword = System.getenv("SIGNING_SECRET")
-
-    signing.keyId = System.getenv("PRIVATE_KEY")
-    signing.password = System.getenv("SIGNING_SECRET")
-    useInMemoryPgpKeys(signingKey, signingPassword)
-    sign publishing.publications.maven
+    sign configurations.archives
 }
-
-
-bintray {
-    user = project.hasProperty('bintrayUser') ? project.property('bintrayUser') : System.getenv('BINTRAY_USER')
-    key = project.hasProperty('bintrayApiKey') ? project.property('bintrayApiKey') : System.getenv('BINTRAY_API_KEY')
-
-    publications = ['MyPublication']
-    //configurations = ['archives']
-
-    dryRun = false //Whether to run this as dry-run, without deploying
-    publish = true //If version should be auto published after an upload
-
-    pkg {
-        repo = 'maven'
-        userOrg = 'sybit-education'
-        name = 'airtable.java'
-        licenses = ['MIT License']
-        vcsUrl = 'https://github.com/Sybit-Education/airtable.java.git'
-        version {
-            name = getVersionName()
-            released = new Date()
-        }
-    }
-}
-
 integrationTest.mustRunAfter test
 
