--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Build
+name: Build & Publish
 
 on: [ push ]
 
@@ -34,4 +34,7 @@ jobs:
       - name: Publish with Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: -Pversion=${{ github.event.release.tag_name }} publish          
+          arguments: -Pversion=${{ github.event.release.tag_name }} publish
+        env:
+          ACTION_DEPLOY_USER: ${{ secrets.ACTION_DEPLOY_USER }}   
+          ACTION_DEPLOY_TOKEN: ${{ secrets.ACTION_DEPLOY_TOKEN }}
